src/test/ui/nll/user-annotations/dump-fn-method.stderr
error: user substs: UserSubsts { substs: [u32, '0^0], user_self_ty: None }
  --> $DIR/dump-fn-method.rs:26:13
   |
LL |     let x = foo::<u32>;
   |             ^^^^^^^^^^

error: user substs: UserSubsts { substs: [&'static u32, '0^0], user_self_ty: None }
  --> $DIR/dump-fn-method.rs:29:13
   |
LL |     let x = foo::<&'static u32>;
   |             ^^^^^^^^^^^^^^^^^^^

error: user substs: UserSubsts { substs: [^0, u32, ^1, '2^2], user_self_ty: None }
  --> $DIR/dump-fn-method.rs:35:13
   |
LL |     let x = <_ as Bazoom<u32>>::method::<_>;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: user substs: UserSubsts { substs: [u8, u16, u32, '0^0], user_self_ty: None }
  --> $DIR/dump-fn-method.rs:40:13
   |
LL |     let x = <u8 as Bazoom<u16>>::method::<u32>;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: user substs: UserSubsts { substs: [u8, &'static u16, u32, '0^0], user_self_ty: None }
  --> $DIR/dump-fn-method.rs:44:13
   |
LL |     let x = <u8 as Bazoom<&'static u16>>::method::<u32>;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: user substs: UserSubsts { substs: [^0, ^1, u32, '2^2], user_self_ty: None }
  --> $DIR/dump-fn-method.rs:52:5
   |
LL |     y.method::<u32>(44, 66);
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

